listando exames e retorno de resultados